chore: css styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,7 @@
 /***************************
 * Components
  **************************/
+@import 'components/submenu';
+@import 'components/menu';
+@import 'components/items';
+@import 'components/links';
