chore: add event

--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -1,18 +1,30 @@
+%show-submenu {
+  min-height: 50px;
+  padding: 10px 5px;
+  height: auto;
+  right: 25px;
+  width: calc(100% - 25px);
+}
+
 .nested-nav__item {
   flex: 0 0 20%;
   cursor: pointer;
   position: relative;
 
-  &:hover > .nested-nav-submenu {
-    min-height: 50px;
-    padding: 10px 5px;
-    height: auto;
-    right: 20px;
-    width: calc(100% - 20px);
-  }
-
   &-title {
     padding: 15px 10px;
     display: block;
+  }
+
+  &--hovered {
+    &:hover > .nested-nav-submenu {
+      @extend %show-submenu;
+    }
+  }
+
+  &--active {
+    & > .nested-nav-submenu {
+      @extend %show-submenu;
+    }
   }
 }
