--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -3,6 +3,9 @@
   justify-content: space-between;
   list-style-type: none;
   text-align: center;
+  border-radius: 8px;
+  overflow: hidden;
+  color: #fff;
 
   .nested-nav-submenu {
     list-style-type: none;
